@@ -1,3 +1,7 @@
+2012-06-11  Takashi Kato  <ktakashi@ymail.com>
+
+	* sitelib/rfc/x.509.scm (rfc): fixed typo.
+
 2012-06-07  Takashi Kato  <ktakashi@ymail.com>
 
 	* sitelib/text/csv.scm (text): fixed multiple line comments reading.
